Add header parameter to CSWHarvester